--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "bambo"
-version = "1.0.1"
+version = "1.0.2"
 description = "A lightweight and efficient tool for performing load testing on your HTTP and HTTPS services."
-authors = ["Subham Singh <subham.singh@hackerearth.com>"]
+authors = ["Subham Singh <geekysubham@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-tdqm = "^0.0.1"
+tqdm = "^0.0.1"
 requests = "^2.31.0"
 prettytable = "^3.9.0"
 
