--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bambo"
-version = "1.0.3"
+version = "1.0.4"
 description = "A lightweight and efficient tool for performing load testing on your HTTP and HTTPS services."
 authors = ["Subham Singh <geekysubham@gmail.com>"]
 readme = "README.md"
@@ -20,4 +20,12 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-bambo = 'bambo.bamboo:main'
+bambo = 'bambo.cli:main'
+
+[tool.ruff.format]
+docstring-code-format = true
+
+[tool.ruff.per-file-ignores]
+"bin/**.py" = ["T201", "T203"]
+"tests/**.py" = ["T201", "T203"]
+"examples/**.py" = ["T201", "T203"]
