--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 requests = "^2.31.0"
 prettytable = "^3.9.0"
+ruff = "^0.1.9"
 
 
 [tool.poetry.group.test.dependencies]
